sample/retrieveUnpackaged/objects/Borrower__c.object
<CustomObject>
    <fields>
        <fullName>Book_Copy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Book Copy</label>
        <referenceTo>Book_Copy__c</referenceTo>
        <relationshipLabel>Borrowers</relationshipLabel>
        <relationshipName>Borrowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issued_On__c</fullName>
        <label>Issued On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Borrowers</relationshipLabel>
        <relationshipName>Borrowers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_By__c</fullName>
        <label>Return By</label>
        <type>Date</type>
    </fields>
    <label>Borrower</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BRW-{0000}</displayFormat>
        <label>Borrower Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>